# codeindex

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO
crates/: Cargo.toml  README.md
crates/codeindex/: Cargo.toml
crates/codeindex/src/: handlers.rs  languages.rs  main.rs  outline.rs  repo.rs  walker.rs  welcome.rs
crates/codeindex/src/handlers/: javascript.rs  mod.rs  python.rs  rust.rs  typescript.rs
crates/codeindex_common/: Cargo.toml
crates/codeindex_common/src/: lib.rs
crates/qdrant/: Cargo.toml  README.md
crates/qdrant/src/: greeting.rs  lib.rs  main.rs  settings.rs
crates/qdrant/src/actix/: mod.rs
