[package]
name = "codeindex"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = "*"

[dependencies]
colored = "2.0.4"
tokio = { version = "1.32.0", features = ["full"] }
axum = "0.6.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
redis = { version = "0.23.2", features = [ "cluster-async", "tokio-comp" ] }
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.4"
tree-sitter-python = "0.20.4"
tree-sitter-typescript = "0.20.2"
tree-sitter-javascript = "0.20.1"
