[package]
name = "codeindex"
version = "0.1.0"
edition = "2021"
default-run = "codeindex"

[build-dependencies]
cc = "*"

[dependencies]
ignore = "0.4.20"
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.4"
tree-sitter-python = "0.20.4"
tree-sitter-typescript = "0.20.2"
tree-sitter-javascript = "0.20.1"
